--- a/football/39/2022/Regular Season - 18.json
+++ b/football/39/2022/Regular Season - 18.json
@@ -2,7 +2,7 @@
     {
         "fixture": {
             "id": 868116,
-            "referee": null,
+            "referee": "A. Marriner",
             "timezone": "UTC",
             "date": "2022-12-31T15:00:00+00:00",
             "timestamp": 1672498800,
@@ -25,8 +25,8 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media-6.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "logo": "https://media-4.api-sports.io/football/leagues/39.png",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 18"
         },
@@ -34,13 +34,13 @@
             "home": {
                 "id": 35,
                 "name": "Bournemouth",
-                "logo": "https://media-5.api-sports.io/football/teams/35.png",
+                "logo": "https://media-6.api-sports.io/football/teams/35.png",
                 "winner": null
             },
             "away": {
                 "id": 52,
                 "name": "Crystal Palace",
-                "logo": "https://media-4.api-sports.io/football/teams/52.png",
+                "logo": "https://media-6.api-sports.io/football/teams/52.png",
                 "winner": null
             }
         },
@@ -70,7 +70,7 @@
     {
         "fixture": {
             "id": 868117,
-            "referee": null,
+            "referee": "A. Taylor",
             "timezone": "UTC",
             "date": "2022-12-31T17:30:00+00:00",
             "timestamp": 1672507800,
@@ -93,8 +93,8 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media-6.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "logo": "https://media-4.api-sports.io/football/leagues/39.png",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 18"
         },
@@ -102,7 +102,7 @@
             "home": {
                 "id": 51,
                 "name": "Brighton",
-                "logo": "https://media-5.api-sports.io/football/teams/51.png",
+                "logo": "https://media-6.api-sports.io/football/teams/51.png",
                 "winner": null
             },
             "away": {
@@ -138,7 +138,7 @@
     {
         "fixture": {
             "id": 868118,
-            "referee": null,
+            "referee": "G. Scott",
             "timezone": "UTC",
             "date": "2022-12-31T15:00:00+00:00",
             "timestamp": 1672498800,
@@ -161,8 +161,8 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media-6.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "logo": "https://media-4.api-sports.io/football/leagues/39.png",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 18"
         },
@@ -206,7 +206,7 @@
     {
         "fixture": {
             "id": 868119,
-            "referee": null,
+            "referee": "C. Pawson",
             "timezone": "UTC",
             "date": "2022-12-30T20:00:00+00:00",
             "timestamp": 1672430400,
@@ -229,8 +229,8 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media-6.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "logo": "https://media-4.api-sports.io/football/leagues/39.png",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 18"
         },
@@ -244,7 +244,7 @@
             "away": {
                 "id": 46,
                 "name": "Leicester",
-                "logo": "https://media-6.api-sports.io/football/teams/46.png",
+                "logo": "https://media-4.api-sports.io/football/teams/46.png",
                 "winner": null
             }
         },
@@ -274,7 +274,7 @@
     {
         "fixture": {
             "id": 868120,
-            "referee": null,
+            "referee": "A. Madley",
             "timezone": "UTC",
             "date": "2022-12-31T15:00:00+00:00",
             "timestamp": 1672498800,
@@ -297,8 +297,8 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media-6.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "logo": "https://media-4.api-sports.io/football/leagues/39.png",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 18"
         },
@@ -306,13 +306,13 @@
             "home": {
                 "id": 50,
                 "name": "Manchester City",
-                "logo": "https://media-4.api-sports.io/football/teams/50.png",
+                "logo": "https://media-6.api-sports.io/football/teams/50.png",
                 "winner": null
             },
             "away": {
                 "id": 45,
                 "name": "Everton",
-                "logo": "https://media-4.api-sports.io/football/teams/45.png",
+                "logo": "https://media-6.api-sports.io/football/teams/45.png",
                 "winner": null
             }
         },
@@ -342,7 +342,7 @@
     {
         "fixture": {
             "id": 868121,
-            "referee": null,
+            "referee": "S. Hooper",
             "timezone": "UTC",
             "date": "2022-12-31T15:00:00+00:00",
             "timestamp": 1672498800,
@@ -365,8 +365,8 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media-6.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "logo": "https://media-4.api-sports.io/football/leagues/39.png",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 18"
         },
@@ -374,13 +374,13 @@
             "home": {
                 "id": 34,
                 "name": "Newcastle",
-                "logo": "https://media-6.api-sports.io/football/teams/34.png",
+                "logo": "https://media-4.api-sports.io/football/teams/34.png",
                 "winner": null
             },
             "away": {
                 "id": 63,
                 "name": "Leeds",
-                "logo": "https://media-4.api-sports.io/football/teams/63.png",
+                "logo": "https://media-5.api-sports.io/football/teams/63.png",
                 "winner": null
             }
         },
@@ -433,8 +433,8 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media-6.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "logo": "https://media-4.api-sports.io/football/leagues/39.png",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 18"
         },
@@ -448,7 +448,7 @@
             "away": {
                 "id": 49,
                 "name": "Chelsea",
-                "logo": "https://media-4.api-sports.io/football/teams/49.png",
+                "logo": "https://media-5.api-sports.io/football/teams/49.png",
                 "winner": null
             }
         },
@@ -478,7 +478,7 @@
     {
         "fixture": {
             "id": 868123,
-            "referee": null,
+            "referee": "J. Brooks",
             "timezone": "UTC",
             "date": "2023-01-01T14:00:00+00:00",
             "timestamp": 1672581600,
@@ -501,8 +501,8 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media-6.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "logo": "https://media-4.api-sports.io/football/leagues/39.png",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 18"
         },
@@ -516,7 +516,7 @@
             "away": {
                 "id": 66,
                 "name": "Aston Villa",
-                "logo": "https://media-5.api-sports.io/football/teams/66.png",
+                "logo": "https://media-6.api-sports.io/football/teams/66.png",
                 "winner": null
             }
         },
@@ -546,7 +546,7 @@
     {
         "fixture": {
             "id": 868124,
-            "referee": null,
+            "referee": "D. England",
             "timezone": "UTC",
             "date": "2022-12-30T19:45:00+00:00",
             "timestamp": 1672429500,
@@ -569,8 +569,8 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media-6.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "logo": "https://media-4.api-sports.io/football/leagues/39.png",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 18"
         },
@@ -578,13 +578,13 @@
             "home": {
                 "id": 48,
                 "name": "West Ham",
-                "logo": "https://media-6.api-sports.io/football/teams/48.png",
+                "logo": "https://media-5.api-sports.io/football/teams/48.png",
                 "winner": null
             },
             "away": {
                 "id": 55,
                 "name": "Brentford",
-                "logo": "https://media-4.api-sports.io/football/teams/55.png",
+                "logo": "https://media-5.api-sports.io/football/teams/55.png",
                 "winner": null
             }
         },
@@ -614,7 +614,7 @@
     {
         "fixture": {
             "id": 868125,
-            "referee": null,
+            "referee": "R. Jones",
             "timezone": "UTC",
             "date": "2022-12-31T12:30:00+00:00",
             "timestamp": 1672489800,
@@ -637,8 +637,8 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media-6.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "logo": "https://media-4.api-sports.io/football/leagues/39.png",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 18"
         },
@@ -646,13 +646,13 @@
             "home": {
                 "id": 39,
                 "name": "Wolves",
-                "logo": "https://media-5.api-sports.io/football/teams/39.png",
+                "logo": "https://media-4.api-sports.io/football/teams/39.png",
                 "winner": null
             },
             "away": {
                 "id": 33,
                 "name": "Manchester United",
-                "logo": "https://media-4.api-sports.io/football/teams/33.png",
+                "logo": "https://media-6.api-sports.io/football/teams/33.png",
                 "winner": null
             }
         },
