--- a/football/39/2022/Regular Season - 17.json
+++ b/football/39/2022/Regular Season - 17.json
@@ -2,7 +2,7 @@
     {
         "fixture": {
             "id": 868106,
-            "referee": null,
+            "referee": "M. Oliver",
             "timezone": "UTC",
             "date": "2022-12-26T20:00:00+00:00",
             "timestamp": 1672084800,
@@ -25,8 +25,8 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media-6.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "logo": "https://media-4.api-sports.io/football/leagues/39.png",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 17"
         },
@@ -34,13 +34,13 @@
             "home": {
                 "id": 42,
                 "name": "Arsenal",
-                "logo": "https://media-6.api-sports.io/football/teams/42.png",
+                "logo": "https://media-5.api-sports.io/football/teams/42.png",
                 "winner": null
             },
             "away": {
                 "id": 48,
                 "name": "West Ham",
-                "logo": "https://media-6.api-sports.io/football/teams/48.png",
+                "logo": "https://media-4.api-sports.io/football/teams/48.png",
                 "winner": null
             }
         },
@@ -70,7 +70,7 @@
     {
         "fixture": {
             "id": 868107,
-            "referee": null,
+            "referee": "P. Tierney",
             "timezone": "UTC",
             "date": "2022-12-26T17:30:00+00:00",
             "timestamp": 1672075800,
@@ -93,8 +93,8 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media-6.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "logo": "https://media-4.api-sports.io/football/leagues/39.png",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 17"
         },
@@ -102,13 +102,13 @@
             "home": {
                 "id": 66,
                 "name": "Aston Villa",
-                "logo": "https://media-5.api-sports.io/football/teams/66.png",
+                "logo": "https://media-6.api-sports.io/football/teams/66.png",
                 "winner": null
             },
             "away": {
                 "id": 40,
                 "name": "Liverpool",
-                "logo": "https://media-5.api-sports.io/football/teams/40.png",
+                "logo": "https://media-4.api-sports.io/football/teams/40.png",
                 "winner": null
             }
         },
@@ -138,7 +138,7 @@
     {
         "fixture": {
             "id": 868108,
-            "referee": null,
+            "referee": "D. Coote",
             "timezone": "UTC",
             "date": "2022-12-26T12:30:00+00:00",
             "timestamp": 1672057800,
@@ -161,8 +161,8 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media-6.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "logo": "https://media-4.api-sports.io/football/leagues/39.png",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 17"
         },
@@ -170,13 +170,13 @@
             "home": {
                 "id": 55,
                 "name": "Brentford",
-                "logo": "https://media-4.api-sports.io/football/teams/55.png",
+                "logo": "https://media-6.api-sports.io/football/teams/55.png",
                 "winner": null
             },
             "away": {
                 "id": 47,
                 "name": "Tottenham",
-                "logo": "https://media-5.api-sports.io/football/teams/47.png",
+                "logo": "https://media-6.api-sports.io/football/teams/47.png",
                 "winner": null
             }
         },
@@ -206,7 +206,7 @@
     {
         "fixture": {
             "id": 868109,
-            "referee": null,
+            "referee": "S. Hooper",
             "timezone": "UTC",
             "date": "2022-12-27T17:30:00+00:00",
             "timestamp": 1672162200,
@@ -229,8 +229,8 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media-6.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "logo": "https://media-4.api-sports.io/football/leagues/39.png",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 17"
         },
@@ -238,13 +238,13 @@
             "home": {
                 "id": 49,
                 "name": "Chelsea",
-                "logo": "https://media-6.api-sports.io/football/teams/49.png",
+                "logo": "https://media-5.api-sports.io/football/teams/49.png",
                 "winner": null
             },
             "away": {
                 "id": 35,
                 "name": "Bournemouth",
-                "logo": "https://media-6.api-sports.io/football/teams/35.png",
+                "logo": "https://media-5.api-sports.io/football/teams/35.png",
                 "winner": null
             }
         },
@@ -274,7 +274,7 @@
     {
         "fixture": {
             "id": 868110,
-            "referee": null,
+            "referee": "A. Madley",
             "timezone": "UTC",
             "date": "2022-12-26T15:00:00+00:00",
             "timestamp": 1672066800,
@@ -297,8 +297,8 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media-6.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "logo": "https://media-4.api-sports.io/football/leagues/39.png",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 17"
         },
@@ -306,7 +306,7 @@
             "home": {
                 "id": 52,
                 "name": "Crystal Palace",
-                "logo": "https://media-5.api-sports.io/football/teams/52.png",
+                "logo": "https://media-4.api-sports.io/football/teams/52.png",
                 "winner": null
             },
             "away": {
@@ -342,7 +342,7 @@
     {
         "fixture": {
             "id": 868111,
-            "referee": null,
+            "referee": "C. Pawson",
             "timezone": "UTC",
             "date": "2022-12-26T15:00:00+00:00",
             "timestamp": 1672066800,
@@ -365,8 +365,8 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media-6.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "logo": "https://media-4.api-sports.io/football/leagues/39.png",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 17"
         },
@@ -374,13 +374,13 @@
             "home": {
                 "id": 45,
                 "name": "Everton",
-                "logo": "https://media-6.api-sports.io/football/teams/45.png",
+                "logo": "https://media-4.api-sports.io/football/teams/45.png",
                 "winner": null
             },
             "away": {
                 "id": 39,
                 "name": "Wolves",
-                "logo": "https://media-6.api-sports.io/football/teams/39.png",
+                "logo": "https://media-5.api-sports.io/football/teams/39.png",
                 "winner": null
             }
         },
@@ -410,7 +410,7 @@
     {
         "fixture": {
             "id": 868112,
-            "referee": null,
+            "referee": "S. Attwell",
             "timezone": "UTC",
             "date": "2022-12-28T20:00:00+00:00",
             "timestamp": 1672257600,
@@ -433,8 +433,8 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media-6.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "logo": "https://media-4.api-sports.io/football/leagues/39.png",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 17"
         },
@@ -448,7 +448,7 @@
             "away": {
                 "id": 50,
                 "name": "Manchester City",
-                "logo": "https://media-4.api-sports.io/football/teams/50.png",
+                "logo": "https://media-6.api-sports.io/football/teams/50.png",
                 "winner": null
             }
         },
@@ -478,7 +478,7 @@
     {
         "fixture": {
             "id": 868113,
-            "referee": null,
+            "referee": "J. Gillett",
             "timezone": "UTC",
             "date": "2022-12-26T15:00:00+00:00",
             "timestamp": 1672066800,
@@ -501,8 +501,8 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media-6.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "logo": "https://media-4.api-sports.io/football/leagues/39.png",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 17"
         },
@@ -510,13 +510,13 @@
             "home": {
                 "id": 46,
                 "name": "Leicester",
-                "logo": "https://media-4.api-sports.io/football/teams/46.png",
+                "logo": "https://media-5.api-sports.io/football/teams/46.png",
                 "winner": null
             },
             "away": {
                 "id": 34,
                 "name": "Newcastle",
-                "logo": "https://media-6.api-sports.io/football/teams/34.png",
+                "logo": "https://media-5.api-sports.io/football/teams/34.png",
                 "winner": null
             }
         },
@@ -546,7 +546,7 @@
     {
         "fixture": {
             "id": 868114,
-            "referee": null,
+            "referee": "A. Taylor",
             "timezone": "UTC",
             "date": "2022-12-27T20:00:00+00:00",
             "timestamp": 1672171200,
@@ -569,8 +569,8 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media-6.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "logo": "https://media-4.api-sports.io/football/leagues/39.png",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 17"
         },
@@ -578,7 +578,7 @@
             "home": {
                 "id": 33,
                 "name": "Manchester United",
-                "logo": "https://media-6.api-sports.io/football/teams/33.png",
+                "logo": "https://media-4.api-sports.io/football/teams/33.png",
                 "winner": null
             },
             "away": {
@@ -614,7 +614,7 @@
     {
         "fixture": {
             "id": 868115,
-            "referee": null,
+            "referee": "R. Jones",
             "timezone": "UTC",
             "date": "2022-12-26T15:00:00+00:00",
             "timestamp": 1672066800,
@@ -637,8 +637,8 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media-6.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "logo": "https://media-4.api-sports.io/football/leagues/39.png",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 17"
         },
@@ -652,7 +652,7 @@
             "away": {
                 "id": 51,
                 "name": "Brighton",
-                "logo": "https://media-6.api-sports.io/football/teams/51.png",
+                "logo": "https://media-4.api-sports.io/football/teams/51.png",
                 "winner": null
             }
         },
